# db2md

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/: main.css
src/: field_mapper.rs  gui.rs  lib.rs  main.rs  md_gen.rs  reader.rs  yaml_parser.rs
tests/: fruit_test.xlsx  gui_test.rs  md_gen_tests.rs  reader_tests.rs  schema.yaml  yaml_parser_tests.rs
