[package]
name = "db2md"
author = "Sizhe Liu"
email = "sizhe.liu@fit-foxconn.com"
license = "TBA"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = { version = "0.26.1", features = ["dates"] }
chrono = "0.4.38"
yaml-rust2 = "0.9.0"
dioxus = { version = "0.5", features = ["desktop"] }
dioxus-logger = "0.5.1"
