[package]
name = "db2md"
author = "Sizhe Liu"
email = "sizhe.liu@fit-foxconn.com"
license = "TBA"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = { version = "0.26.1", features = ["dates"] }
# cpu only
iced = { version = "0.13.1", default-features = false, features = ["tiny-skia", "image", "advanced", "smol"] }
chrono = "0.4.38"
rfd = "0.15.0"
yaml-rust2 = "0.9.0"
smol = "1.3"